# blenderless

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  WORKSPACE.bazel  pyproject.toml  requirements.txt  requirements_lock.txt  resources.blend  thumbnail_enhancer.py  thumbnail_enhancer_2.py
.github/workflows/: _release.yml  code-quality.yml  main.yml  release.yml
blenderless/: BUILD.bazel  __init__.py  blender_object.py  camera.py  cli.py  geometry.py  io.py  light.py  main.py  material.py  orchestrator.py  scene.py  utils.py
build_tools/: BUILD.bazel  blenderpy.BUILD.bazel  bpy.BUILD.bazel  expand_template.bzl  generate_requirements.sh  pytest_runner.py.tpl  python_configure.bzl  repositories.bzl  testing.bzl
build_tools/blender_builder/: .gitignore  Dockerfile  build.sh
notebooks/: basic_usage.ipynb  mesh_face_colors.ipynb  pointcloud_example.ipynb
renderpy/: camera.py  geometry.py  utils.py
tests/: BUILD.bazel  conftest.py  pytest.ini  test_camera.py  test_cli.py  test_config.py  test_geometries.py  test_material.py  test_render.py  test_scene.py
tests/test_data/: preset.blend
tests/test_data/configs/label/: scene.yaml
tests/test_data/configs/ortho_scale/: scene.yaml
tests/test_data/configs/scene_dark/: scene.yaml
tests/test_data/configs/scene_label/: scene.blend  scene.blend1
tests/test_data/configs/scene_light/: scene.yaml
tests/test_data/configs/simple/: scene.yaml
tests/test_data/mesh/: cube_ten.stl
