workspace(name = "blenderless")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "c03246c11efd49266e8e41e12931090b613e12a59e6f55ba2efd29a7cb8b4258",
    strip_prefix = "rules_python-0.11.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.11.0.tar.gz",
)

load("@rules_python//python:pip.bzl", "pip_parse")

PYTHON_INTERPRETER = "python3.8"

pip_parse(
    name = "pip_deps",
    python_interpreter = PYTHON_INTERPRETER,
    requirements_lock = "//:requirements_lock.txt",
)

load("@pip_deps//:requirements.bzl", install_pip_deps = "install_deps")

install_pip_deps()

load("//build_tools:repositories.bzl", "blenderless_repositories")

blenderless_repositories()
