[tool]

[tool.poetry]
name = "blenderless"
version = "1.0.0"
authors = []
description = ""

[tool.poetry.dependencies]
python = "~3.7"
pillow = "*"
bpy = "==2.91a0"
trimesh = "^3.9.24"
hydra-core = "^1.0.7"
imageio = "*"
xvfbwrapper = "^0.2.9"

[tool.poetry.dev-dependencies]
pytest = "*"
pytype = "*"
pytest-cov = "*"
coverage = "*"
numpy = "*"
Pillow= "*"
scikit-image = "^0.18.0"
pre-commit = "*"
yapf = "*"
pylint = "^2.5.3"
notebook = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry>=1.1.2", "setuptools", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
