[tool]

[tool.poetry]
name = "blenderless"
version = "0.0.0"
authors = [
    "Axel Vlaminck <axel.vlaminck@oqton.com>",
    "Ruben Verhack <ruben.verhack@oqton.com>"
]
description = "Blenderless is the python package for easy headless rendering using blender."
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/oqton/blenderless"
repository = "https://github.com/oqton/blenderless"
documentation = "https://github.com/oqton/blenderless"
keywords = ["rendering", "blender", "headless", "3D"]

[tool.poetry.dependencies]
python = "~3.7"
pillow = "*"
bpy = "==2.91a0"
trimesh = "^3.14.0"
hydra-core = "^1.0.7"
imageio = "*"
xvfbwrapper = "^0.2.9"
click = "^8.0.1"
tqdm = "^4.61.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytype = "*"
pytest-cov = "*"
coverage = "*"
numpy = "*"
Pillow= "*"
scikit-image = "^0.18.0"
pre-commit = "*"
yapf = "*"
pylint = "^2.5.3"
notebook = "*"

[tool.poetry.scripts]
blenderless = 'blenderless.cli:cli'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry>=1.1.2", "setuptools", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
