load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "blenderless_lib",
    srcs = [
        "__init__.py",
        "blender_object.py",
        "camera.py",
        "geometry.py",
        "light.py",
        "main.py",
        "material.py",
        "scene.py",
        "utils.py",
    ],
    imports = ["."],
    deps = [
        "@bpy",
        requirement("numpy"),
        requirement("trimesh"),
        requirement("hydra-core"),
        requirement("imageio"),
        requirement("omegaconf"),
    ],
)

py_binary(
    name = "blenderless",
    srcs = [
        "cli.py",
    ],
    main = "cli.py",
    visibility = ["//visibility:public"],
    deps = [
        ":blenderless_lib",
        requirement("click"),
    ],
)
