load("//build_tools:testing.bzl", "py_pytest_tests")
load("@pip_deps//:requirements.bzl", "requirement")

py_pytest_tests(
    name = "tests",
    size = "medium",
    srcs = [
        "conftest.py",
        "test_camera.py",
        "test_cli.py",
        "test_config.py",
        "test_geometries.py",
        "test_material.py",
        "test_render.py",
        "test_scene.py",
    ],
    data = glob(
        ["test_data/**"],
    ),
    deps = [
        "//blenderless",
        "@bpy",
        requirement("scikit-image"),
    ],
)
